<resources>
    <string name="app_name" translatable="false">HomeFeeder</string>

    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_sources">Data sources</string>

    <string name="date_format_day_month" translatable="false">%1$d %2$s</string>
    <string name="date_format_day_month_year" translatable="false">%1$d %2$s %3$d</string>
    <string name="date_ago_now">now</string>
    <string name="date_at">at</string>
    <string name="date_at_1am">@string/date_at</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>

    <string name="pref_cat_contact">Contacts</string>
    <string name="pref_tg">Official Telegram channel</string>
    <string name="pref_tg_author">Developer</string>
    <string name="pref_git">Source code</string>

    <string name="pref_cat_overlay">Appearance</string>
    <string name="pref_transparency">Overlay background transparency</string>
    <string name="pref_ovr_theme">Overlay theme</string>
    <string name="pref_compact">Compact item layout</string>

    <string name="pref_card_bg">Card background</string>
    <string name="pref_bg_color">Overlay background</string>

    <string name="service_label">Notification feed category</string>
    <string name="allow_notify_pref">Notification permission</string>
    <string name="allow_notify_pref_granted">Granted</string>
    <string name="allow_notify_pref_revoked">Not granted, click here to allow</string>
    <string name="allow_notify_desc">HomeFeeder needs \"Notification access\" permission to show your notifications in a overlay. Data is processed only on-device and won\'t be sent from it.\n\nPlease note that some features of HomeFeeder might be unavailable until you grant the permission.</string>
    <string name="allow_notify_to_settings">Open settings</string>
    <string name="cancel">Cancel</string>

    <string name="storage_alert">Storage permission</string>
    <string name="storage_desc">HomeFeeder needs \"Read external storage\" permission to save various data and show accurate previews.\n\nThis permission is not needed, but recommended for using.</string>
    <string name="storage_action">Request</string>

    <string name="overlay_no_permission">No permission granted</string>
    <string name="overlay_reload">Click here to reload</string>
    <string name="overlay_no_permission_desc">HomeFeeder needs \"Notification access\" permission to show your notifications in a overlay.</string>
    <string name="overlay_no_permission_snackbar">Please verify you have allowed \"Notification access\" permission and try again.</string>

    <string name="fsource_notifications">Notifications</string>
    <string name="fsource_weather">Weather</string>

    <string name="pref_syscolors">Use system wallpaper colors</string>
    <string name="pref_syscolors_desc">instead of \"Launcher:\" options</string>
    <string name="pref_syscolors_disabled">Requires Android 8.1 or newer</string>

    <string name="action_reload">Reload</string>

    <string name="pm_empty">No sources installed</string>
    <string name="pm_desc">HomeFeeder uses them to display data</string>
</resources>
