<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ua.itaysonlab.homefeeder.prefui.HFElementPreview
        android:key="preview"
        app:layout="@layout/preview" />
    <Preference
        android:key="hf_permission"
        android:title="@string/allow_notify_pref"
        android:icon="@drawable/ic_warning_24"
        android:summary="@string/allow_notify_pref_revoked" />
    <PreferenceCategory android:title="@string/pref_cat_overlay">
        <ListPreference
            android:defaultValue="auto_launcher"
            android:entries="@array/pref_overlay_theme_desc"
            android:entryValues="@array/pref_overlay_theme_values"
            android:key="ovr_theme"
            android:title="@string/pref_ovr_theme" />
        <ListPreference
            android:defaultValue="non_transparent"
            android:entries="@array/pref_overlay_transparency_desc"
            android:entryValues="@array/pref_overlay_transparency_values"
            android:key="ovr_transparency"
            android:title="@string/pref_transparency" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="ovr_compact"
            android:title="@string/pref_compact" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="ovr_syscolors"
            android:title="@string/pref_syscolors"
            android:summary="@string/pref_syscolors_desc" />
        <ListPreference
            android:defaultValue="theme"
            android:entries="@array/pref_color_variations"
            android:entryValues="@array/pref_color_variations_values"
            android:key="ovr_bg"
            android:title="@string/pref_bg_color" />
        <ListPreference
            android:defaultValue="theme"
            android:entries="@array/pref_color_variations"
            android:entryValues="@array/pref_color_variations_values"
            android:key="ovr_card_bg"
            android:title="@string/pref_card_bg" />
    </PreferenceCategory>
</PreferenceScreen>