<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_settings">

    <fragment
        android:id="@+id/navigation_plugins"
        android:name="ua.itaysonlab.homefeeder.fragments.PluginsFragment"
        android:label="@string/title_sources" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ua.itaysonlab.homefeeder.fragments.PreferenceFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="ua.itaysonlab.homefeeder.fragments.AboutFragment"
        android:label="@string/title_about" />
</navigation>