<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/user_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/overlay_root"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/overlay_header" />
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_to_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/notification_simple" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/no_access_stub"
            android:visibility="gone"
            tools:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/nas_icon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_notifications_24" />

                <TextView
                    android:id="@+id/nas_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/overlay_no_permission"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nas_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/overlay_no_permission_desc" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nas_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/allow_notify_to_settings" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nas_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/overlay_reload" />
        </RelativeLayout>
    </FrameLayout>
</FrameLayout>